--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bg-gray-100 text-gray-800 p-6">
   <div class="max-w-3xl mx-auto">
-    <h1 class="text-3xl font-bold mb-4">📜 JavaScript файлы</h1>
+    <h1 class="text-3xl font-bold mb-4">📜 Плагины для Lampa</h1>
     <div id="script-list" class="space-y-3"></div>
   </div>
 </body>
